les couleurs qui piquent les yeux page accueil avec les tableaux message bienvenue tableau colonne équilibrée

--- a/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
+++ b/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="{{ asset('/css/circuit.css') }}"/>
 <div id="new_circuit_content">
     <div class="selects_circuit">
         <select id="users_list" size="5">
