--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
@@ -1,17 +1,27 @@
 <table class="table">
     <thead>
     <tr>
-        <th>Id</th>
-        <th>Nom</th>
-        <th>Creation</th>
+        <th>Titre du classeur</th>
+        <th>Intervention</th>
+        <th>Date de création</th>
+        <th>Date limite de validation</th>
+        <th>Statut actuel</th>
+        <th>Action</th>
     </tr>
     </thead>
     <tbody>
     {% for entity in entities %}
         <tr class="classeur-row" data-id="{{ entity.id }}">
-            <td><a href="{{ path('classeur_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
             <td>{{ entity.nom }}</td>
-            <td>{% if entity.creation %}{{ entity.creation|date('Y-m-d H:i:s') }}{% endif %}</td>
+            <td>inter</td>
+            <td>{% if entity.creation %}{{ entity.creation | date('Y-m-d H:i:s') }}{% endif %}</td>
+            <td>{% if entity.creation %}{{ entity.creation | date('Y-m-d H:i:s') }}{% endif %}</td>
+            <td>Statut</td>
+            <td class="boutons_action">
+                <a href=""><img src="{{  asset("/images/pen.png") }}" /></a>
+                <a href=""><img src="{{  asset("/images/eye.png") }}" /></a>
+                <a href=""><img src="{{  asset("/images/trash.png") }}" /></a>
+            </td>
         </tr>
     {% endfor %}
     </tbody>
