--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -3,9 +3,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>{% block title %}Welcome!{% endblock %}</title>
+    <link rel="stylesheet" href="{{ asset('/bootstrap/css/bootstrap.css') }}"/>
     <link rel="stylesheet" href="{{ asset('/css/style.css') }}"/>
     <link rel="stylesheet" href="{{ asset('/css/menu.css') }}"/>
-    <link rel="stylesheet" href="{{ asset('/bootstrap/css/bootstrap.css') }}"/>
+    <link rel="stylesheet" href="{{ asset('/css/table.css') }}"/>
     <link rel="shortcut icon" href="{{ asset('favicon.ico') }}"/>
     <link rel="stylesheet" href="{{ asset('css/dropzone.css') }}"/>
     <script type="text/javascript" src="{{ asset("/js/jquery-2.0.3.min.js") }}"></script>
