menu presque fini

--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -19,7 +19,7 @@
 <body>
 <div id="maman">
     <div class="col-md-2" id="lemenu">
-        <div>logo</div>
+        <a href="/app_dev.php"><div id="logo"><img src="{{  asset("/images/badlogo.png") }}" /></div></a>
         {% include 'SesileMainBundle:Default:menu.html.twig' %}
     </div>
     <div class="col-md-10" id="content">
