--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -1,22 +1,34 @@
 {% block menu %}
     <div class="menu">
         <ul>
-            <li class="menu-elem menu-1"><a href="{{ path("classeur_new") }}">Création d'un circuit</a></li>
-            <li class="menu-elem menu-2">
-                <a class="dd-toggle" href="#">Classeurs<b class="caret"></b></a>
+            <li class="menu-elem menu-rouge">
+                <div class="entete-menu"><a href="{{ path("classeur_new") }}">Création d'un circuit</a></div>
+            </li>
+
+            <li class="menu-elem menu-bleu">
+                <div class="dd-toggle entete-menu"><a  href="#">Classeurs<b class="caret"></b></a></div>
                 <ul class="dd-menu">
                     <li><a href="{{ path("classeur") }}">Liste des classeurs</a></li>
                     <li><a href="{{ path("classeur_new") }}">Ajout d'un classeur</a></li>
                     <li><a href="">A valider</a></li>
                 </ul>
             </li>
-            <li class="menu-elem menu-3">
-                <a data-toggle="dropdown" class="dd-toggle" href="#">Utilisateurs<b class="caret"></b></a>
+
+            <li class="menu-elem menu-jaune">
+                <div class="dd-toggle entete-menu"><a  href="#">Utilisateurs<b class="caret"></b></a></div>
                 <ul class="dd-menu">
                     <li><a href="{{ path("liste_users") }}">Liste des utilisateurs</a></li>
                     <li><a href="{{ path("liste_users") }}">Voir son compte</a></li>
                     <li><a href="{{ path("liste_users") }}">Groupes</a></li>
                     <li><a href="{{ path("liste_users") }}">Hiérarchie</a></li>
+                </ul>
+            </li>
+            <li class="menu-elem menu-vert">
+                <div class="dd-toggle entete-menu"><a  href="#">Classeurs<b class="caret"></b></a></div>
+                <ul class="dd-menu">
+                    <li><a href="{{ path("classeur") }}">Liste des classeurs</a></li>
+                    <li><a href="{{ path("classeur_new") }}">Ajout d'un classeur</a></li>
+                    <li><a href="">A valider</a></li>
                 </ul>
             </li>
         </ul>
