--- a/web/css/style.css
+++ b/web/css/style.css
@@ -16,15 +16,24 @@ html, body{
 /*-------------------------     DÉBUT MENU     -------------------------*/
 #lemenu{
     min-height: 100%;
-    background: orange;
+    background: white url("/images/vichy.png");
     box-shadow: 2px 0 12px #3A3A3A;
     z-index: 2;
     padding: 0;
 }
+
+#logo{
+    width: 75px;
+    height: 107px;
+    margin: auto;
+    margin-bottom: 10%;
+    margin-top: 5%;
+}
+
 /*-------------------------     FIN MENU =>  DÉBUT CONTENU     -------------------------*/
 #content {
     min-height: 100%;
-    background-color:greenyellow;
+    background-color:greenyellow ; /*#f7f7f7*/
     display: inline-block;
 }
 
