--- a/web/bootstrap/css/bootstrap.css
+++ b/web/bootstrap/css/bootstrap.css
@@ -3458,12 +3458,14 @@ input[type="button"].btn-block {
   display: inline-block;
   width: 0;
   height: 0;
-  margin-left: 2px;
-  vertical-align: middle;
   border-top: 4px solid #000000;
   border-right: 4px solid transparent;
   border-bottom: 0 dotted;
   border-left: 4px solid transparent;
+  float: right;
+  position: relative;
+  top:20px;
+  right:12px;
 }
 
 .dropdown {
