--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,103 +1,155 @@
 * {
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
-html, body{
-    height: 100%;
+
+html, body {
+	height: 100%;
 }
 
 #maman {
-    background-color: #cccccc;
-    width:100%;
-    height: 100%;
+	background-color: #cccccc;
+	width: 100%;
+	height: 100%;
 }
-
 
 /*-------------------------     DÉBUT MENU     -------------------------*/
-#lemenu{
-    min-height: 100%;
-    background: white url("/images/vichy.png");
-    box-shadow: 2px 0 12px #3A3A3A;
-    z-index: 2;
-    padding: 0;
+#lemenu {
+	min-height: 100%;
+	background: white url("/images/vichy.png");
+	box-shadow: 2px 0 12px #3a3a3a;
+	z-index: 2;
+	padding: 0;
 }
 
-#logo{
-    width: 75px;
-    height: 107px;
-    margin: auto;
-    margin-bottom: 10%;
-    margin-top: 5%;
+#logo {
+	width: 75px;
+	height: 107px;
+	margin: auto;
+	margin-bottom: 15%;
+	margin-top: 5%;
 }
 
 /*-------------------------     FIN MENU =>  DÉBUT CONTENU     -------------------------*/
 #content {
-    min-height: 100%;
-    background-color:greenyellow ; /*#f7f7f7*/
-    display: inline-block;
+	min-height: 100%;
+	background-color: #eaeaea;
+	display: inline-block;
 }
-
+/*-------------------------     DÉBUT HEADER FOOTER    -------------------------*/
 #header {
-    background-color: #cccccc;
-}
-
-#lecontent {
-    width: 90%;
-    margin: auto;
-    padding: 10px;
-}
-
-.bloc_accueil {
-    background-color: #ffffff;
-    padding: 10px;
-    margin-bottom: 20px;
-}
-
-.titre_bloc_accueil {
-    background-color: #ffffff;
-    padding: 10px;
-    border-bottom: 3px dotted #555555;
-    text-transform: uppercase;
+	width:96%;
+	height: 2em;
+	background-color: #cccccc;
+	text-align: right;
+	margin: auto;
 }
 
 #footer {
-    background-color: pink;
-    min-height: 18%;
-    min-width: 97%;
-    text-align: center;
-    bottom: 0px;
+	width: 97%;
+	min-height: 3em;
+	text-align: center;
+	position: absolute;
+	bottom: 0px;
 }
 
-.classeur-row a img {
-    visibility: hidden;
+.legal,
+.legal a{
+	font-size: 0.8em;
+	color: rgba(147, 147, 147, 1);
+}
+
+.signature,
+.signature a{
+	font-size: 0.55em;
+	color: rgba(147, 147, 147, 1);
+}
+
+.tooltip-inner  .creativecommons  {
+	text-transform: lowercase !important;
+	color: #000;
+	background: #fff;
+	border: solid 1px #fff;
+}
+
+#textefooter{
+	width:90%;
+	position: relative;
+	top: 1em;
+	display: inline-block;
+}
+
+#logosictiampetit{
+	width: 7%;
+	display: inline-block;
+}
+
+/*-------------------------     FIN HEADER FOOTER =>  SUITE CONTENU     -------------------------*/
+.titre_bloc_accueil .glyphicon-home,
+.titre_bloc_accueil .glyphicon-edit,
+.titre_bloc_accueil .glyphicon-eye-open {
+	font-size: 18px;
+	margin: 0px 8px 0px 0px;
+	color: rgba(109, 109, 109, 1);
+}
+
+#lecontent {
+	width: 90%;
+	margin: auto;
+	padding: 10px;
+}
+
+.bloc_accueil,
+.bloc_page {
+	background-color: #ffffff;
+	padding: 10px;
+	margin-bottom: 20px;
+}
+
+.titre_bloc_accueil {
+	background-color: #ffffff;
+	padding: 10px;
+	border-bottom: 3px dotted #555555;
+	text-transform: uppercase;
+}
+
+.boutons_action {
+	width: 100px;
+}
+
+.classeur-row .glyphicon {
+	visibility: hidden;
 }
 
 .user-row:hover, .classeur-row:hover {
-    background-color: rgba(50, 133, 171, 0.5);
-    cursor: pointer;
+	background-color: rgba(50, 133, 171, 0.5);
+	cursor: pointer;
 }
 
-.classeur-row:hover a img {
-    visibility: visible;
+.classeur-row:hover .glyphicon {
+	color: rgba(109, 109, 109, 1);
+	visibility: visible;
 }
 
-/*-------------------------     FIN CONTENU     -------------------------*/
+.classeur-row:hover .glyphicon:hover {
+	visibility: visible;
+	color: rgba(0,255,0,1);
+}
 
 .titre_page {
-    font-size: 1.5em;
-    text-transform: uppercase;
-    color: #222222;
-    border-bottom: 3px dotted #555555;
+	font-size: 1.5em;
+	text-transform: uppercase;
+	color: #222222;
+	border-bottom: 3px dotted #555555;
 }
 
 .titre_form_element {
-    background-color: #3285ab;
-    margin: 10px 0 10px 0;
-    text-transform: uppercase;
-    color: #ffffff;
+	background-color: #3285ab;
+	margin: 10px 0 10px 0;
+	text-transform: uppercase;
+	color: #ffffff;
 }
 
 #documentcontent {
-    border: 5px dashed #cccccc;
+	border: 5px dashed #cccccc;
 }
-
