Avancement sur les tableaux, menu de connexion.

--- a/src/Sesile/UserBundle/Resources/views/Default/ajout.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/ajout.html.twig
@@ -1,4 +1,4 @@
-{% extends "SesileMainBundle:Default:main.html.twig" %}
+{% extends "SesileMainBundle:Default:index.html.twig" %}
 
 {% block content %}
     {{ form(form) }}
