--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -25,17 +25,25 @@
     </div>
     <div class="col-md-10" id="content">
         <div id="header">
-            {% block header %}
                 {% if app.user != null %}
-                    Bonjour {{ app.user.username }}<br>
-                    <a href="{{ path("fos_user_security_logout") }}">D&eacute;connexion</a>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                            <img class="userpicture"  src="http://static.colourlovers.com/images/lovers/3522/3522185t.jpg?1387813886" />&nbsp;
+                            {{ app.user.username }}&nbsp;&nbsp;&nbsp;<span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu menu_connexion" role="menu">
+                            <li class="li1"><a  href="{{ path("fos_user_profile_edit") }}"><span class="glyphicon glyphicon-user"></span>Compte</a></li>
+                            <li class="divider"></li>
+                            <li class="li2"><a  href="{{ path("fos_user_security_logout") }}"><span class="glyphicon glyphicon-off"></span>D&eacute;connexion</a></li>
+                        </ul>
+                    </div>
                 {% else %}
-                    <a href="{{ path("fos_user_security_login") }}">Connexion</a>
+                    <a class="btn btn-success" href="{{ path("fos_user_security_login") }}">Connexion</a>
                 {% endif %}
-            {% endblock %}
         </div>
         <div id="lecontent">
             {% block content %}
+                <div id="contenu_acceuil">
                 <div class="bloc_accueil">
                     <div id="bienvenue">
                         <div class="titre_bloc_accueil"><span class="glyphicon glyphicon-home"></span>Bienvenue</div>
@@ -55,6 +63,7 @@
                         <div class="titre_bloc_accueil"><span class="glyphicon glyphicon-eye-open"></span>Classeurs visibles</div>
                         {% render url("liste_classeurs") %}
                     </div>
+                </div>
                 </div>
             {% endblock %}
         </div>
@@ -77,10 +86,10 @@
                 </span>
                 <br />
                 <span class="signature">
-                    COPYRIGHT &copy;2013
-                    &nbsp; &ndash; &nbsp;
                     <a class="sitesictiam" href="http://www.sictiam.fr/" target="_blank">
-                    R&Eacute;ALIS&Eacute; PAR LE SICTIAM
+                        COPYRIGHT &copy;2013
+                        &nbsp; &ndash; &nbsp;
+                        R&Eacute;ALIS&Eacute; PAR LE SICTIAM
                     </a>
                 </span>
             </div>
