--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -14,7 +14,7 @@
                 <div class="dd-toggle entete-menu {% if( '/classeur/' in app.request.requestUri ) %}titremenu{% endif %}">
                     <a href="#">
                         <div class="rectanglemenu" id="bleuclair"></div>
-                        Classeurs<b class="caret"></b></a>
+                        Classeurs<b class="caret carette"></b></a>
                 </div>
                 <ul class="dd-menu">
                     <li>
@@ -49,7 +49,7 @@
                 <div class="dd-toggle entete-menu {% if( '/user/' in app.request.requestUri ) %}titremenu{% endif %}">
                     <a href="#">
                         <div class="rectanglemenu" id="vertclair"></div>
-                        Utilisateurs<b class="caret"></b></a>
+                        Utilisateurs<b class="caret carette"></b></a>
                 </div>
                 <ul class="dd-menu">
                     <li>
