--- a/web/css/style.css
+++ b/web/css/style.css
@@ -5,6 +5,7 @@
 
 html, body {
 	height: 100%;
+	background-color: #eaeaea;
 }
 
 #maman {
@@ -30,38 +31,38 @@ html, body {
 	margin-top: 5%;
 }
 
-/*-------------------------     FIN MENU =>  DÉBUT CONTENU     -------------------------*/
+/*-------------------------     FIN MENU =>  DÉBUT HEADER FOOTER     -------------------------*/
 #content {
 	min-height: 100%;
 	background-color: #eaeaea;
 	display: inline-block;
 }
-/*-------------------------     DÉBUT HEADER FOOTER    -------------------------*/
+
 #header {
-	width:96%;
-	height: 2em;
-	background-color: #cccccc;
+	width:90%;
+	height: 3em;
 	text-align: right;
 	margin: auto;
 }
 
 #footer {
-	width: 97%;
+	width: 90%;
 	min-height: 3em;
 	text-align: center;
 	position: absolute;
 	bottom: 0px;
+	margin-left: 5%;
 }
 
 .legal,
 .legal a{
-	font-size: 0.8em;
+	font-size: 0.9em;
 	color: rgba(147, 147, 147, 1);
 }
 
 .signature,
 .signature a{
-	font-size: 0.55em;
+	font-size: 0.8em;
 	color: rgba(147, 147, 147, 1);
 }
 
@@ -84,7 +85,7 @@ html, body {
 	display: inline-block;
 }
 
-/*-------------------------     FIN HEADER FOOTER =>  SUITE CONTENU     -------------------------*/
+/*-------------------------     FIN HEADER FOOTER     -------------------------*/
 .titre_bloc_accueil .glyphicon-home,
 .titre_bloc_accueil .glyphicon-edit,
 .titre_bloc_accueil .glyphicon-eye-open {
@@ -96,7 +97,13 @@ html, body {
 #lecontent {
 	width: 90%;
 	margin: auto;
-	padding: 10px;
+
+	background-color: #ffffff;
+}
+
+#contenu_acceuil {
+	background-color: #eaeaea;
+	width: 100%;
 }
 
 .bloc_accueil,
@@ -111,6 +118,9 @@ html, body {
 	padding: 10px;
 	border-bottom: 3px dotted #555555;
 	text-transform: uppercase;
+	color: rgba(109, 109,109, 1);
+	font-size: 18px;
+	font-weight: bold;
 }
 
 .boutons_action {
@@ -133,7 +143,7 @@ html, body {
 
 .classeur-row:hover .glyphicon:hover {
 	visibility: visible;
-	color: rgba(0,255,0,1);
+	color: rgba(50, 133, 171, 1);
 }
 
 .titre_page {
@@ -153,3 +163,38 @@ html, body {
 #documentcontent {
 	border: 5px dashed #cccccc;
 }
+/*-------------------------     DÉBUT MENU CONNEXION    -------------------------*/
+
+.menu_connexion {
+	text-align: right;
+}
+
+.menu_connexion
+.glyphicon{
+	float: left;
+}
+
+.menu_connexion li:hover
+.glyphicon{
+	color: rgba(50, 133, 171, 1);
+
+}
+
+.userpicture{
+	width: 2em;
+	height: 2em;
+	background-color: deeppink;
+}
+
+/*-------------------------     FIN MENU CONNEXION =>   DÉBUT TABLEAU     -------------------------*/
+
+.tableau{
+	margin-top: 1em;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	border: 1px solid pink;
+	color: rgba(109, 110, 112, 1);
+}
+
+/*-------------------------     FIN TABLEAU =>   DÉBUT BLABLA     -------------------------*/
