liens des menus mise a jour

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
@@ -16,7 +16,7 @@
                 <td>inter</td>
                 <td>{% if classeur.creation %}{{ classeur.creation | date('d-m-Y H:i:s') }}{% endif %}</td>
                 <td>{% if classeur.creation %}{{ classeur.creation | date('d-m-Y H:i:s') }}{% endif %}</td>
-                <td>Statut</td>
+                <td class="statut"><span class="glyphicon statut_{{ classeur.status }}"></span></td>
                 <td class="boutons_action">
                     <a href="{{ path("classeur_edit", { 'id': classeur.id  }) }}"><span class="glyphicon glyphicon-pencil"></span></a>
                     <a href="{{ path("classeur_show", {'id' : classeur.id }) }}"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -31,3 +31,5 @@
         suivreUrl("" + $(this).data("id"), e);
     });
 </script>
+
+
