--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -30,7 +30,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="{{ path("classeur_a_valider") }}">
                             <img class="arrows" src="{{ asset("/images/arrowblue.png") }}"/>
                             A valider
                         </a>
@@ -59,7 +59,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="{{ path("liste_users") }}">
+                        <a href="{{ path("fos_user_profile_show") }}">
                             <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
                             Voir son compte
                         </a>
