--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -49,7 +49,7 @@
                 <div class="bloc_accueil">
                     <div id="classeurs_a_valider">
                         <div class="titre_bloc_accueil"><span class="glyphicon glyphicon-edit"></span>Classeurs à valider</div>
-                        {% render url("liste_classeurs") %}
+                        {% render url("classeur_a_valider") %}
                     </div>
                     <div id="liste_classeurs">
                         <div class="titre_bloc_accueil"><span class="glyphicon glyphicon-eye-open"></span>Classeurs visibles</div>
