--- a/web/css/style.css
+++ b/web/css/style.css
@@ -6,22 +6,26 @@
 html, body {
 	background-color: #eaeaea;
 	font-size: 13px;
+    height: 100%;
 }
 
 #maman {
 	background-color: #cccccc;
 	width: 100%;
-	height: auto;
-	overflow: auto;
+    height: 100%;
+    display: table;
+    table-layout: fixed;
 }
 
 /*-------------------------     DÉBUT MENU     -------------------------*/
-#lemenu {
-	height: 100%;
+#gauche {
 	background: white url("/images/vichy.png");
-	box-shadow: 0.143em 0 0.857em #3a3a3a;
-	z-index: 2;
-	padding: 0;
+    display: table-cell;
+    position: relative;
+    z-index: 2;
+    min-height: 100%;
+    width: 15%;
+    box-shadow: 0.143em 0 0.8em #3a3a3a;
 }
 
 #logo {
@@ -35,26 +39,37 @@ html, body {
 }
 
 /*-------------------------     FIN MENU =>  DÉBUT HEADER FOOTER     -------------------------*/
-#content {
+#droite {
+    position: relative;
 	min-height: 100%;
 	background-color: #eaeaea;
-	display: inline-block;
+    z-index: 0;
+    display: table-cell;
 }
 
 #header {
 	width:90%;
-	height: 3em;
+	height: 2em;
 	text-align: right;
 	margin: auto;
 }
 
+#lecontenu {
+    width: 90%;
+    margin: auto;
+    margin-bottom: 10%;
+    min-height: 100%;
+    background-color: #ffffff;
+}
+
+
 #footer {
-	width: 90%;
-	min-height: 3em;
-	text-align: center;
-	position: absolute;
-	bottom: 0em;
-	margin-left: 5%;
+    bottom: 0;
+    min-height: 3em;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    width: 100%;
 }
 
 .legal,
@@ -94,14 +109,6 @@ html, body {
 .titre_bloc_accueil .glyphicon-eye-open {
 	margin: 0 0.571em 0 0;
 	color: rgba(109, 109, 109, 1);
-}
-
-#lecontent {
-	width: 90%;
-	margin: auto;
-	margin-bottom: 10%;
-	min-height: 70%;
-	background-color: #ffffff;
 }
 
 #contenu_acceuil {
