--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -30,9 +30,15 @@
                         </a>
                     </li>
                     <li>
-                        <a href="{{ path("classeur_a_valider") }}">
+                        <a href="{{ path("index_valider") }}">
                             <img class="arrows" src="{{ asset("/images/arrowblue.png") }}"/>
                             A valider
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ path("index_retractables") }}">
+                            <img class="arrows" src="{{ asset("/images/arrowblue.png") }}"/>
+                            Droit de retractation
                         </a>
                     </li>
                 </ul>
