--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
@@ -1,16 +1,37 @@
 {% extends 'SesileMainBundle:Default:index.html.twig' %}
 
 {% block content %}
-    <h1>Classeur edit</h1>
+    <form action="{{ path("classeur_valider") }}" method="post">
+        <button type="submit" class="btn btn-success">Valider</button>
+        <input type="hidden" value="{{ classeur.id }}" name="id" />
+    </form>
+    <form method="{{ path("classeur_valider") }}">
+        <button type="submit" class="btn btn-danger">Refuser</button>
+        <input type="hidden" value="{{ classeur.id }}" name="id" />
+    </form>
+    <br>
+    <div class="titre_form_element">Titre</div>
+    <input class="form-control" id="name" name="name" placeholder="Nom" value="{{ classeur.nom }}">
+    <br>
 
-    {{ form(edit_form) }}
+    <div class="titre_form_element">Description</div>
+    <textarea class="form-control" rows="3" name="desc" id="desc">{{ classeur.description }}</textarea>
+    <br>
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('classeur') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+    <div class="titre_form_element">Documents</div>
+    <div id="documentcontent"></div>
+    <br>
+
+    <div class="titre_form_element">Circuit</div>
+    <div id="circuitcontent"></div>
+    <br>
+
+    {% block extraform %}
+    {% endblock %}
+
+    <div>
+        <br/>
+        <button type="button" class="btn">Annuler</button>
+        <button type="submit" class="btn btn-success">Envoyer</button>
+    </div>
 {% endblock %}
