- Polices - % + em - Menu

--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -84,6 +84,8 @@
         $(".entete-menu").click(function () {
             $(".titremenu").removeClass("titremenu");
             $(this).addClass("titremenu");
+            $(".dd-menu:visible").slideUp();
+            $(this).next(".dd-menu").slideDown();
         });
 
         $(".dd-menu li").click(function () {
