--- a/web/bootstrap/css/bootstrap.css
+++ b/web/bootstrap/css/bootstrap.css
@@ -305,7 +305,7 @@ html {
 }
 
 body {
-  font-family:  "Arial", Helvetica Neue, Helvetica, sans-serif;
+  font-family: 'Droid Sans', sans-serif;
   font-size: 14px;
   line-height: 1.428571429;
   color: #333333;
