--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
@@ -1,10 +1,10 @@
 {% extends 'SesileMainBundle:Default:index.html.twig' %}
 
 {% block content %}
-<div class="titre_page">Déposer un nouveau classeur</div>
+    <div class="titre_page">Déposer un nouveau classeur</div>
     <br>
-<form class="form-horizontal" role="form" action="{{ path('classeur_create') }}" method="POST">
-        <div class="row">
+    <form class="form-horizontal" role="form" action="{{ path('classeur_create') }}" method="POST">
+        <div class="">
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="type" class="col-sm-2 control-label">Type</label>
