Ajout de documents quasi ok

--- a/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpez.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpez.html.twig
@@ -2,6 +2,12 @@
 
 {% block extraform %}
 
-    Viva el pez !
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <div class="alert alert-info">Le dernier validateur devra <strong>signer électroniquement</strong> les
+                bordereaux <strong>PESV2</strong> contenus dans ce classeur.
+            </div>
 
+        </div>
+    </div>
 {% endblock %}
