--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
@@ -1,37 +1,75 @@
 {% extends 'SesileMainBundle:Default:index.html.twig' %}
 
 {% block content %}
-    <form action="{{ path("classeur_valider") }}" method="post">
-        <button type="submit" class="btn btn-success">Valider</button>
-        <input type="hidden" value="{{ classeur.id }}" name="id" />
-    </form>
-    <form method="{{ path("classeur_valider") }}">
-        <button type="submit" class="btn btn-danger">Refuser</button>
-        <input type="hidden" value="{{ classeur.id }}" name="id" />
-    </form>
-    <br>
-    <div class="titre_form_element">Titre</div>
-    <input class="form-control" id="name" name="name" placeholder="Nom" value="{{ classeur.nom }}">
-    <br>
+    <div class="bloc_page">
+        {% if classeur.isValidable(app.user.id) %}
+            {% if classeur.isSignable(app.user.id) %}
+                <form class="form_action" action="{{ path("classeur_valider_et_signer") }}" method="post">
+                    <button type="submit" class="btn btn-valider">Valider et Signer</button>
+                    <input type="hidden" value="{{ classeur.id }}" name="id"/>
+                </form>
+            {% else %}
+                <form class="form_action" action="{{ path("classeur_valider") }}" method="post">
+                    <button type="submit" class="btn btn-valider">Valider</button>
+                    <input type="hidden" value="{{ classeur.id }}" name="id"/>
+                </form>
+            {% endif %}
 
-    <div class="titre_form_element">Description</div>
-    <textarea class="form-control" rows="3" name="desc" id="desc">{{ classeur.description }}</textarea>
-    <br>
+            <form class="form_action" action="{{ path("classeur_refuser") }}" method="post">
+                <button type="submit" class="btn btn-refuser">Refuser</button>
+                <input type="hidden" value="{{ classeur.id }}" name="id"/>
+            </form>
+        {% endif %}
 
-    <div class="titre_form_element">Documents</div>
-    <div id="documentcontent"></div>
-    <br>
+        {% if classeur.isRetractable(app.user.id) %}
+            <form class="form_action" action="{{ path("classeur_retracter") }}" method="post">
+                <button type="submit" class="btn btn-retracter">Se r&eacute;tracter</button>
+                <input type="hidden" value="{{ classeur.id }}" name="id"/>
+            </form>
+        {% endif %}
 
-    <div class="titre_form_element">Circuit</div>
-    <div id="circuitcontent"></div>
-    <br>
+        {% if classeur.isModifiable(app.user.id) %}
+            <button id="btn_modifier" type="button" class="btn btn-modifier">Modifier</button>
+        {% endif %}
 
-    {% block extraform %}
-    {% endblock %}
+        {% if classeur.isSupprimable(app.user.id) %}
+            <form class="form_action" action="{{ path("classeur_supprimer") }}" method="post">
+                <button type="submit" class="btn btn-supprimer">Supprimer</button>
+                <input type="hidden" value="{{ classeur.id }}" name="id"/>
+            </form>
+        {% endif %}
+        <br>
 
-    <div>
-        <br/>
-        <button type="button" class="btn">Annuler</button>
-        <button type="submit" class="btn btn-success">Envoyer</button>
+        <form action="{{ path("classeur_retracter") }}" method="post">
+            <div class="titre_form_element">Titre</div>
+            <input class="form-control" id="name" name="name" disabled placeholder="Nom" value="{{ classeur.nom }}">
+            <br>
+
+            <div class="titre_form_element">Description</div>
+            <textarea class="form-control" rows="3" name="desc" disabled id="desc">{{ classeur.description }}</textarea>
+            <br>
+
+            <div class="titre_form_element">Documents</div>
+            <div id="documentcontent"></div>
+            <br>
+
+            <div class="titre_form_element">Circuit</div>
+            <div id="circuitcontent"></div>
+            <br>
+
+            {% block extraform %}
+            {% endblock %}
+
+            <div>
+                <br/>
+                <button type="submit" id="enregistrer_modif" style="display: none;" class="btn btn-success">Enregistrer les modifications</button>
+            </div>
+        </form>
+        <script type="application/javascript">
+            $("#btn_modifier").click(function () {
+                $("#name, #desc").removeAttr("disabled");
+                $("#enregistrer_modif").show();
+            });
+        </script>
     </div>
 {% endblock %}
