--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
@@ -16,12 +16,16 @@
                 <td>inter</td>
                 <td>{% if classeur.creation %}{{ classeur.creation | date('d-m-Y H:i:s') }}{% endif %}</td>
                 <td>{% if classeur.creation %}{{ classeur.creation | date('d-m-Y H:i:s') }}{% endif %}</td>
-                <td class="statut"><span class="glyphicon statut_{{ classeur.status }}"></span></td>
+                <td class="statut">
+                    <span class="glyphicon statut_{{ classeur.status }}"></span>
+                </td>
                 <td class="boutons_action">
-                    {% if classeur.isValidable(app.user.id) %}<a href="{{ path("classeur_edit", { 'id': classeur.id  }) }}"><span class="glyphicon glyphicon-pencil"></span></a>{% endif %}
-                    <a href="{{ path("classeur_show", {'id' : classeur.id }) }}"><span class="glyphicon glyphicon-eye-open"></span></a>
-                    {% if classeur.isRetractable(app.user.id)%}<a href="{{ path("classeur_delete", {'id' : classeur.id }) }}"><span class="glyphicon glyphicon-trash"></span></a>{% endif %}
-                    {% if classeur.isSupprimable(app.user.id)%}<a href="{{ path("classeur_delete", {'id' : classeur.id }) }}"><span class="glyphicon glyphicon-trash"></span></a>{% endif %}
+                    <a href="{{ path("classeur_edit", {'id' : classeur.id }) }}">
+                        <span class="glyphicon glyphicon-pencil"></span>
+                    </a>
+                    {% if classeur.isSupprimable(app.user.id) %}
+                    <a href="{{ path("classeur_edit", {'id' : classeur.id }) }}">
+                            <span class="glyphicon glyphicon-trash"></span></a>{% endif %}
                 </td>
             </tr>
         {% endfor %}
