--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -10,10 +10,13 @@
         <link rel="stylesheet" href="{{ asset('/css/table.css') }}"/>
         <link rel="shortcut icon" href="{{ asset('favicon.ico') }}"/>
         <link rel="stylesheet" href="{{ asset('css/dropzone.css') }}"/>
+        <link rel="stylesheet" href="{{ asset('css/animate.css') }}"/>
         <script type="text/javascript" src="{{ asset("/js/jquery-2.0.3.min.js") }}"></script>
         <script type="text/javascript" src="{{ asset("/bootstrap/js/bootstrap.min.js") }}"></script>
         <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
         <script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}"></script>
+        <script src="{{ asset('/js/lettering.js') }}"></script>
+        <script src="{{ asset('/js/textillate.js') }}"></script>
 
         <!--[if gte IE 9]>
         <style type="text/css">
@@ -36,52 +39,53 @@
                 {% include 'SesileMainBundle:Default:menu.html.twig' %}
             </div>
             <div id="droite">
-                    <div id="header">
-                        {% if app.user != null %}
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                                    <img class="userpicture" src="http://static.colourlovers.com/images/lovers/3522/3522185t.jpg?1387813886"/>
-                                    &nbsp;
-                                    {{ app.user.username }}&nbsp;&nbsp;&nbsp;
-                                    <span class="caret"></span>
-                                </button>
-                                <ul class="dropdown-menu menu_connexion" role="menu">
-                                    <li class="li1">
-                                        <a href="{{ path("fos_user_profile_edit") }}">
-                                            <span class="glyphicon glyphicon-user"></span>
-                                            Compte
-                                        </a>
-                                    </li>
-                                    <li class="divider"></li>
-                                    <li class="li2">
-                                        <a href="{{ path("fos_user_security_logout") }}">
-                                            <span class="glyphicon glyphicon-off"></span>
-                                            D&eacute;connexion
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        {% else %}
-                            <a class="btn btn-success" href="{{ path("fos_user_security_login") }}">Connexion</a>
-                        {% endif %}
-                    </div>
-                    <div id="lecontenu">
-                        {% block content %}
-                            <div id="contenu_acceuil">
-                                <div class="bloc_accueil">
-                                    <div id="bienvenue">
-                                        <div class="titre_bloc_accueil">
-                                            <span class="glyphicon glyphicon-home"></span>
-                                            Bienvenue
-                                        </div>
-                                        Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant
-                                        impression. Le Lorem Ipsum est le le le lel (je vous le donne)*
-                                        <a href="#" data-toggle="tooltip" class="sesiletooltip" title="test tooltip">lel lelllllelelfaux texte</a>
-                                        standard de l'imprimerie depuis les années 1500, quand
-                                        un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de
+                <div id="header">
+                    {% if app.user != null %}
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                                <img class="userpicture" src="http://static.colourlovers.com/images/lovers/3522/3522185t.jpg?1387813886"/>
+                                &nbsp;
+                                {{ app.user.username }}&nbsp;&nbsp;&nbsp;
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu menu_connexion" role="menu">
+                                <li class="li1">
+                                    <a href="{{ path("fos_user_profile_edit") }}">
+                                        <span class="glyphicon glyphicon-user"></span>
+                                        Compte
+                                    </a>
+                                </li>
+                                <li class="divider"></li>
+                                <li class="li2">
+                                    <a href="{{ path("fos_user_security_logout") }}">
+                                        <span class="glyphicon glyphicon-off"></span>
+                                        D&eacute;connexion
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    {% else %}
+                        <a class="btn btn-success" href="{{ path("fos_user_security_login") }}">Connexion</a>
+                    {% endif %}
+                </div>
+                <div id="lecontenu">
+                    {% block content %}
+                        <div id="contenu_acceuil">
+                            <div class="bloc_accueil">
+                                <div id="bienvenue">
+                                    <div class="titre_bloc_accueil">
+                                        <span class="glyphicon glyphicon-home"></span>
+                                        Bienvenue
                                     </div>
+                                    Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant
+                                    impression. Le Lorem Ipsum est le le le lel (je vous le donne)*
+                                    <a href="#" data-toggle="tooltip" class="sesiletooltip" title="test tooltip">lel lelllllelelfaux texte</a>
+                                    standard de l'imprimerie depuis les années 1500, quand
+                                    un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de
                                 </div>
-                                <div class="bloc_accueil">
+                            </div>
+                            <div class="bloc_accueil">
+                                {% if app.user %}
                                     <div id="classeurs_a_valider">
                                         <div class="titre_bloc_accueil">
                                             <span class="glyphicon glyphicon-edit"></span>
@@ -96,29 +100,32 @@
                                         </div>
                                         {% render url("liste_classeurs") %}
                                     </div>
-                                </div>
+                                {% else %}
+                                    <img src="http://www.purina.fr/images/articles/illustrations/chat/coaching/entretenir_poils_longs_chat.jpg">
+                                {% endif %}
                             </div>
-                        {% endblock %}
-                    </div>
-                    <div id="footer">
-                        <div id="textefooter">
+                        </div>
+                    {% endblock %}
+                </div>
+                <div id="footer">
+                    <div id="textefooter">
 <span class="legal">
 <a class="contact" href="mailto:internet@sictiam.fr">
-    CONTACT
+    <span class="lettersmove">CONTACT</span>
 </a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a class="sesiletooltip mentionlegales" href="http://creativecommons.org/licenses/by-nc-nd/3.0/fr/legalcode" target="_blank" data-toggle="tooltip"
-   title="Parapheur Sesile - 2013">
-    MENTIONS L&Eacute;GALES
+<a class="sesiletooltip mentionlegales" href="http://creativecommons.org/licenses/by-nc-nd/3.0/fr/legalcode" target="_blank"><!-- data-toggle="tooltip"
+   title="Parapheur Sesile - 2013" -->
+    <span class="lettersmove">MENTIONS L&Eacute;GALES</span>
 
 </a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a class="sesiletooltip creativecommons" href="http://creativecommons.org/licenses/by-nc-nd/3.0/fr/" target="_blank" data-toggle="tooltip"
-   title="Creative Commons Attributions : <br /> Pas d'utilisation commerciale <br /> Pas de modification - 3.0 France">
-    CREATIVE COMMONS
+<a class="sesiletooltip creativecommons" href="http://creativecommons.org/licenses/by-nc-nd/3.0/fr/" target="_blank"> <!--data-toggle="tooltip"
+   title="Creative Commons Attributions : <br /> Pas d'utilisation commerciale <br /> Pas de modification - 3.0 France"-->
+    <span class="lettersmove">CREATIVE COMMONS</span>
 </a>
 </span>
-                            <br/>
+                        <br/>
 <span class="signature">
 <a class="sitesictiam" href="http://www.sictiam.fr/" target="_blank">
     COPYRIGHT &copy;2013
@@ -126,19 +133,31 @@
     R&Eacute;ALIS&Eacute; PAR LE SICTIAM
 </a>
 </span>
-                        </div>
-                        <div id="logosictiampetit">
-                            <img src="/images/logosictiampetit.png"/>
-                        </div>
+                    </div>
+                    <div id="logosictiampetit">
+                        <img src="/images/logosictiampetit.png"/>
                     </div>
                 </div>
+            </div>
             {% block losjavascriptos %}
             {% endblock %}
-            <script>
-
+            <script type="text/javascript">
                 $('.sesiletooltip').tooltip({
                     placement: 'top',
                     html: true
+                });
+
+                var textill = $('.lettersmove').textillate({
+                    autoStart: false,
+                    in: {
+                        effect: 'wobble',
+                        shuffle: true,
+                        delayScale: 1,
+                        delay: 200
+                    }
+                });
+                textill.on('mouseenter', function () {
+                    $(this).textillate('start');
                 });
             </script>
         </div>
