--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -71,7 +71,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="{{ path("liste_users") }}">
+                        <a href="{{ path("create_hierarchie") }}">
                             <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
                             Hiérarchie
                         </a>
