--- a/src/Sesile/UserBundle/Resources/views/Default/create_hierarchie.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/create_hierarchie.html.twig
@@ -1,7 +1,7 @@
-{% extends "SesileMainBundle:Default:main.html.twig" %}
+{% extends "SesileMainBundle:Default:index.html.twig" %}
 
 {% block content %}
-    <form id="formulaire" action="{{ path('create_hierarchie') }}"method="POST">
+    <form id="formulaire" action="{{ path("create_hierarchie") }}"method="POST">
         <input type ="text" value="Nom du groupe" name="Nom"/>
         <input type ="hidden" name="GroupeId"/>
         <input type ="hidden" name="UserId"/>
