--- a/web/css/dropzone.css
+++ b/web/css/dropzone.css
@@ -45,6 +45,7 @@
     vertical-align: top;
     border: 1px solid #acacac;
     padding: 6px 6px 6px 6px;
+    text-align: center;
 }
 
 .dropzone .dz-preview.dz-file-preview [data-dz-thumbnail],
